# smartmet-plugin-avi

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  smartmet-plugin-avi.spec
avi/: Config.cpp  Config.h  Plugin.cpp  Plugin.h  Query.cpp  Query.h  QueryLimits.h
documentation/: EXAMPLES.md  README.md
include/: Config.h  Plugin.h  Query.h
source/: Config.cpp  Plugin.cpp  Query.cpp
test/: .gitignore  Makefile  PluginTest.cpp
test/cnf/: authengine.conf  aviengine.conf  aviengine.conf.in  aviplugin-with-authentication.conf  aviplugin.conf  reactor-with-authentication.conf  reactor.conf
test/input/: latest_by_1_route.get  latest_by_1_route_all.get  latest_by_1_route_allscopes.get  latest_by_1_route_allscopes_all.get  latest_by_1_route_exclspecis.get  latest_by_1_route_exclspecis_all.get  latest_by_1_route_fir.get  latest_by_1_route_fir_all.get  latest_by_1_route_firglob.get  latest_by_1_route_firglob_all.get  latest_by_1_route_glob.get  latest_by_1_route_glob_all.get  latest_by_1_route_statfir.get  latest_by_1_route_statfir_all.get  latest_by_1_route_statglob.get  latest_by_1_route_statglob_all.get  latest_by_1_route_withspecis.get  latest_by_1_route_withspecis_all.get  latest_by_n_bbox.get  latest_by_n_bbox_all.get  latest_by_n_bbox_defaspecis.get  latest_by_n_bbox_defaspecis_all.get  latest_by_n_bbox_exclspecis.get  latest_by_n_bbox_exclspecis_all.get  latest_by_n_bbox_withspecis.get  latest_by_n_bbox_withspecis_all.get  latest_by_n_icao.get  latest_by_n_icao_all.get  latest_by_n_id.get  latest_by_n_id_all.get  latest_by_n_latlon.get  latest_by_n_latlon_all.get  latest_by_n_poly.get  latest_by_n_poly_all.get  latest_specifilt0_by_1_bbox.get  latest_specifilt1_by_1_bbox.get  messages_by_1_route.get  messages_by_1_route_all.get  messages_by_1_route_allscopes.get  messages_by_1_route_allscopes_all.get  (+67 more)
test/output/: latest_by_1_route_all.get  latest_by_1_route_allscopes.get  latest_by_1_route_allscopes_all.get  latest_by_1_route_exclspecis.get  latest_by_1_route_exclspecis_all.get  latest_by_1_route_fir_all.get  latest_by_1_route_firglob.get  latest_by_1_route_firglob_all.get  latest_by_1_route_glob.get  latest_by_1_route_glob_all.get  latest_by_1_route_statfir.get  latest_by_1_route_statglob.get  latest_by_1_route_statglob_all.get  latest_by_1_route_withspecis.get  latest_by_1_route_withspecis_all.get  latest_by_n_bbox_exclspecis.get  latest_by_n_icao.get  latest_by_n_id.get  latest_by_n_id_all.get  latest_by_n_latlon_all.get  latest_by_n_poly_all.get  latest_specifilt0_by_1_bbox.get  latest_specifilt1_by_1_bbox.get  messages_by_1_route.get  messages_by_1_route_all.get  messages_by_1_route_allscopes.get  messages_by_1_route_allscopes_all.get  messages_by_1_route_allscopes_created.get  messages_by_1_route_allscopes_created_all.get  messages_by_1_route_firglob.get  messages_by_1_route_firglob_all.get  messages_by_1_route_firglob_created.get  messages_by_1_route_firglob_created_all.get  messages_by_1_route_statfir.get  messages_by_1_route_statfir_all.get  messages_by_1_route_statfir_created.get  messages_by_1_route_statfir_created_all.get  messages_by_1_route_statglob.get  messages_by_1_route_statglob_all.get  messages_by_1_route_statglob_created.get  (+41 more)
test/unit_test/: CMakeLists.txt  Makefile  config.cpp  plugin.cpp  query.cpp  querylimits.cpp
